src/objects/QueueableMonitor__c.object
<CustomObject>
    <description>Objeto de util que sirve de apoyo para controlar los fallos de los trabajos en cola</description>
    <fields>
        <fullName>ExceptionMessage__c</fullName>
        <label>ExceptionMessage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExceptionStack__c</fullName>
        <label>ExceptionStack</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JSON_Job__c</fullName>
        <label>JSON_Job</label>
        <length>65536</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Class__c</fullName>
        <label>Job_Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Id__c</fullName>
        <externalId>true</externalId>
        <label>Job_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <label>ObjectName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Record_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Failed</fullName>
                    <default>true</default>
                    <label>Failed</label>
                </value>
                <value>
                    <fullName>Retrying</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>QueueableMonitor</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QM-{0000000000}</displayFormat>
        <label>QueueableMonitor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QueueableMonitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>